--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Επικίνδυνοι</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="gallery.css"> 
     <link rel="stylesheet" href="back-to-top.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-brand">
-                <img src="images/logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
+                <img src="logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
                 <span class="guild-name">Επικίνδυνοι</span>
             </div>
             <ul class="nav-links">
@@ -54,7 +54,7 @@
                 <div class="form-group">
                     <label for="imageUrl">URL Φωτογραφίας:</label>
                     <input type="url" id="imageUrl" placeholder="https://example.com/my-awesome-screenshot.jpg" required>
-                    <small>Η διεύθυνση URL της εικόνας σας (π.χ., από Imgur, Discord CDN).</small>
+                    <small>Η διεύθυνση URL της εικόνας σας (π.χ. Discord).</small>
                 </div>
                 <div class="form-group">
                     <label for="imageAlt">Τίτλος / Εναλλακτικό Κείμενο:</label>
@@ -125,3 +125,4 @@
     <script src="gallery.js"></script> 
 </body>
 </html>
+
