--- a/guides.html
+++ b/guides.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Οδηγοί / Builds - Επικίνδυνοι</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="guides.css"> 
     <link rel="stylesheet" href="back-to-top.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-brand">
-                <img src="images/logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
+                <img src="logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
                 <span class="guild-name">Επικίνδυνοι</span>
             </div>
             <ul class="nav-links">
@@ -70,18 +70,18 @@
                     <h3>Εισαγωγή στον Dragonknight</h3>
                     <p>Ο Dragonknight είναι η επιτομή της αντοχής και της δύναμης στο Drakensang Online. Με την ικανότητα να απορροφά τεράστιο damage και να προκαλεί παράλληλα ζημιά, είναι απαραίτητος σε κάθε ομάδα. Είτε επιλέξεις να παίξεις ως αλύγιστος tank είτε ως ένας επιθετικός DPS warrior, ο Dragonknight προσφέρει πολλές επιλογές.</p>
                     <p><strong>Βασικά Στατιστικά:</strong> Υγεία, Θωράκιση, Αντίσταση, Ζημιά (για DPS builds).</p>
-                    <img src="images/warrior.jpg" alt="Dragonknight Screenshot" class="guide-image">
+                    <img src="warrior.jpg" alt="Dragonknight Screenshot" class="guide-image">
                 </div>
                 <div class="guide-section">
                     <h3>Builds για Αρχάριους</h3>
                     <p>Για αρχάριους, συνιστάται ένα build που εστιάζει στην αντοχή. Συγκεντρώστε αντικείμενα με υψηλή Θωράκιση, Υγεία και Αντίσταση. Οι βασικές σας ικανότητες θα πρέπει να περιλαμβάνουν αμυντικά buffs και AoE επιθέσεις για αποτελεσματικό farming.</p>
-                    <img src="images/warr-basic-build.jpg" alt="Basic build for a warrior" class="guide-image">
+                    <img src="warr-basic-build.jpg" alt="Basic build for a warrior" class="guide-image">
                 </div>
                 <div class="guide-section">
                     <h3>Mid-Game Builds</h3>
                     <p>Εστιάστε σε sets που προσφέρουν τεράστια αυξημένη ζημιά και aggro. Ιδανικό για να κρατάτε τους bosses μακριά από την ομάδα.</p>
                     <p>Αυτό το build θυσιάζει λίγη αντοχή για να μεγιστοποιήσει την ζημιά. Ιδανικό για γρήγορα clears σε dungeons.</p>
-                    <img src="images/mid-game-warrior.jpg" alt="Dragonknight Build" class="guide-image">
+                    <img src="mid-game-warrior.jpg" alt="Dragonknight Build" class="guide-image">
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                     <h3>Εισαγωγή στον Ranger</h3>
                     <p>Ο Ranger είναι ο master του ranged combat και των παγίδων. Με την ικανότητα να κινούνται γρήγορα, να προκαλούν τεράστια ζημιά από απόσταση και να ελέγχουν το πεδίο μάχης με παγίδες, είναι ένας πολύπλευρος χαρακτήρας.</p>
                     <p><strong>Βασικά Στατιστικά:</strong> Ζημιά, Ταχύτητα Επίθεσης, Κρίσιμο Χτύπημα, Κρίσιμη Ζημιά.</p>
-                    <img src="images/ranger.jpg" alt="Ranger Screenshot" class="guide-image">
+                    <img src="ranger.jpg" alt="Ranger Screenshot" class="guide-image">
                 </div>
                 <div class="guide-section">
                     <h3>Builds για Αρχάριους</h3>
@@ -99,9 +99,9 @@
                         θα δείτε δύο από τα build που μπορεί να φτιάξει ένας αρχάριος τοξότης για να μπορέσει να ανταπεξέλθει στο παιχνίδι
                     </p>
                     <h3>1. <u>Build για όπλο ενός χεριού</u></h3>
-                    <img src="images/starter_2_ranger.jpg" alt="One hand weapon build" class="guide-image"> <br>
+                    <img src="starter_2_ranger.jpg" alt="One hand weapon build" class="guide-image"> <br>
                     <h3>1. <u>Build για όπλο δύο χεριών</u> (Mid-Game build)</h3>
-                    <img src="images/starter_pack_ranger.jpg" alt="Two hands weapon build" class="guide-image">
+                    <img src="starter_pack_ranger.jpg" alt="Two hands weapon build" class="guide-image">
                 </div>
             </div>
 
@@ -111,12 +111,12 @@
                     <h3>Εισαγωγή στον Spellweaver</h3>
                     <p>Ο Spellweaver είναι ο master της μαγείας, ικανός να προκαλέσει τεράστια στοιχειώδη ζημιά σε μεγάλες περιοχές. Με μια πληθώρα ξορκιών για AoE, single target και crowd control, είναι μια δυναμική προσθήκη σε κάθε ομάδα.</p>
                     <p><strong>Βασικά Στατιστικά:</strong> Ζημιά, Κρίσιμο Χτύπημα, Κρίσιμη Ζημιά, Ταχύτητα Επίθεσης.</p>
-                    <img src="images/mage.jpg" alt="Spellweaver Screenshot" class="guide-image">
+                    <img src="mage.jpg" alt="Spellweaver Screenshot" class="guide-image">
                 </div>
                 <div class="guide-section">
                     <h3>Early-Mid Game build</h3>
                     <p>Ξεκινήστε με βασικές επιθέσεις και AoE ξόρκια για γρήγορο farming. Εστιάστε στην εύρεση αντικειμένων που αυξάνουν τη ζημιά σας και τη συνολική σας επιβίωση.</p>
-                    <img src="images/mage-build.jpg" alt="Mage Build" class="guide-image">
+                    <img src="mage-build.jpg" alt="Mage Build" class="guide-image">
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
                     <h3>Εισαγωγή στον Steam Mechanicus</h3>
                     <p>Ο Steam Mechanicus είναι μια μοναδική κλάση που βασίζεται σε μηχανικά gadgets, τουρρέτες και εκρηκτικά. Είναι εξαιρετικός τόσο σε single target damage όσο και σε AoE, με την ικανότητα να δημιουργεί μια "ζώνη θανάτου" γύρω του.</p>
                     <p><strong>Βασικά Στατιστικά:</strong> Ζημιά, Ταχύτητα Επίθεσης, Κρίσιμο Χτύπημα, Κρίσιμη Ζημιά.</p>
-                    <img src="images/nanos.jpg" alt="Steam Mechanicus Screenshot" class="guide-image">
+                    <img src="nanos.jpg" alt="Steam Mechanicus Screenshot" class="guide-image">
                 </div>
                 <div class="guide-section">
                     <h3>Builds για Αρχάριους</h3>
@@ -181,4 +181,5 @@
     <script src="guides.js"></script> 
     <script src="navbar.js"></script>
 </body>
+
 </html>
