--- a/guild.html
+++ b/guild.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Το Σινάφι Μας - Επικίνδυνοι</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="guild.css"> 
     <link rel="stylesheet" href="back-to-top.csss"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-brand">
-                <img src="images/logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
+                <img src="logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
                 <span class="guild-name">Επικίνδυνοι</span>
             </div>
             <ul class="nav-links">
@@ -150,4 +150,5 @@
     <script src="navbar.js"></script>
 
 </body>
+
 </html>
