--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Νέα Παιχνιδιού - Επικίνδυνοι</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="news.css">
     <link rel="stylesheet" href="back-to-top.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-brand">
-                <img src="images/logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
+                <img src="logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
                 <span class="guild-name">Επικίνδυνοι</span>
             </div>
             <ul class="nav-links">
@@ -73,3 +73,4 @@
     <script src="news.js"></script> 
 </body>
 </html>
+
