--- a/recipes.html
+++ b/recipes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Πάγκος Εργασίας - Επικίνδυνοι</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="recipes.css"> 
     <link rel="stylesheet" href="back-to-top.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-brand">
-                <img src="images/logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
+                <img src="logo.jpg" alt="Επικίνδυνοι Logo" class="logo">
                 <span class="guild-name">Επικίνδυνοι</span>
             </div>
             <ul class="nav-links">
@@ -65,7 +65,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-utensils"></i> Ψαροκροκέτες και Κέτσαπ</h3>
                         <div class="recipe-image-container">
-                            <img src="images/psarokroketes.jpg" alt="Ψαροκροκέτες και Κέτσαπ">
+                            <img src="psarokroketes.jpg" alt="Ψαροκροκέτες και Κέτσαπ">
                         </div>
                         <p>Ένα κλασικό γεύμα με πικάντικη γεύση.</p>
                         <div class="recipe-ingredients">
@@ -80,7 +80,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-utensils"></i> BBQ Μοσχάρι</h3>
                         <div class="recipe-image-container">
-                            <img src="images/bbq.jpg" alt="BBQ Μοσχάρι">
+                            <img src="bbq.jpg" alt="BBQ Μοσχάρι">
                         </div>
                         <p>Φτιάξε ένα νόστιμο γεύμα με τα απαραίτητα συστατικά.</p>
                         <div class="recipe-ingredients">
@@ -95,7 +95,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-utensils"></i> Θαλασσινά και Κρέας</h3>
                         <div class="recipe-image-container">
-                            <img src="images/thalassina_kreas.jpg" alt="Θαλασσινά και Κρέας">
+                            <img src="thalassina_kreas.jpg" alt="Θαλασσινά και Κρέας">
                         </div>
                         <p>Στεριά και θάλασσα συνδυασμένα σε ένα πιάτο!</p>
                         <div class="recipe-ingredients">
@@ -111,7 +111,7 @@
                      <div class="recipe-item">
                         <h3><i class="fas fa-utensils"></i> Ουσίες Κάντικορν</h3>
                         <div class="recipe-image-container">
-                            <img src="images/candycorn.jpg" alt="Ουσίες Κάντικορν">
+                            <img src="candycorn.jpg" alt="Ουσίες Κάντικορν">
                         </div>
                         <p>Ενισχύουν τη δύναμη επίθεσης και χρησιμοποιούνται ανά επίθεση. Γενικά χρήσιμες και συμφέρουσες!</p>
                         <div class="recipe-ingredients">
@@ -131,7 +131,7 @@
                         <div class="recipe-item" style="text-align: center;">
                             <h3>Ανταλλαγή Γευμάτων για Νομίσματα</h3>
                             <div class="recipe-image-container">
-                                <img src="images/metatropeas.jpg" alt="Μετατροπέας Νομισμάτων Κουζίνας">
+                                <img src="metatropeas.jpg" alt="Μετατροπέας Νομισμάτων Κουζίνας">
                             </div>
                             <p>Μετατρέψτε τα έτοιμα γεύματα της Κουζίνας σε πολύτιμα Νομίσματα Κουζίνας, προσφέροντάς τα στον NPC Ανταλλαγής.</p>
                             <div class="recipe-ingredients">
@@ -152,7 +152,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-flask"></i> Θρυλικό Τονωτικό Ζωής</h3>
                         <div class="recipe-image-container">
-                            <img src="images/tonotiko_zoi.jpg" alt="Θρυλικό Τονωτικό Ζωής">
+                            <img src="tonotiko_zoi.jpg" alt="Θρυλικό Τονωτικό Ζωής">
                         </div>
                         <p>Καταναλώνεται κατά τη χρήση. Μπορείτε να έχετε ταυτόχρονα ενεργό μόνο ένα τονωτικό.</p>
                         <div class="recipe-ingredients">
@@ -171,7 +171,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-flask"></i> Θρυλικό Τονωτικό Ρώμης</h3>
                         <div class="recipe-image-container">
-                            <img src="images/tonotiko_zimia.jpg" alt="Θρυλικό Τονωτικό Ρώμης">
+                            <img src="tonotiko_zimia.jpg" alt="Θρυλικό Τονωτικό Ρώμης">
                         </div>
                         <p>Καταναλώνεται κατά τη χρήση. Μπορείτε να έχετε ταυτόχρονα ενεργό μόνο ένα τονωτικό.</p>
                         <div class="recipe-ingredients">
@@ -190,7 +190,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-flask"></i> Προηγμένο Φάρμακο Ζωής</h3>
                         <div class="recipe-image-container">
-                            <img src="images/proigmeno_zois.jpg" alt="Προηγμένο Φάρμακο Ζωής">
+                            <img src="proigmeno_zois.jpg" alt="Προηγμένο Φάρμακο Ζωής">
                         </div>
                         <p>Καταναλώνεται κατά τη χρήση. Μπορείτε να έχετε ταυτόχρονα ενεργό μόνο ένα φάρμακο.</p>
                         <div class="recipe-ingredients">
@@ -209,7 +209,7 @@
                     <div class="recipe-item">
                         <h3><i class="fas fa-flask"></i> Προηγμένο Φάρμακο Ρώμης</h3>
                         <div class="recipe-image-container">
-                            <img src="images/proigmeno_zimias.jpg" alt="Προηγμένο Φάρμακο Ρώμης">
+                            <img src="proigmeno_zimias.jpg" alt="Προηγμένο Φάρμακο Ρώμης">
                         </div>
                         <p>Καταναλώνεται κατά τη χρήση. Μπορείτε να έχετε ταυτόχρονα ενεργό μόνο ένα φάρμακο.</p>
                         <div class="recipe-ingredients">
@@ -228,7 +228,7 @@
                      <div class="recipe-item">
                         <h3><i class="fas fa-flask"></i> Ελιξίριο του Οστέινου Δράκου (Μόρτις)</h3>
                         <div class="recipe-image-container">
-                            <img src="images/mpoukalaki_morti.jpg" alt="Ελιξίριο του Οστέινου Δράκου">
+                            <img src="mpoukalaki_morti.jpg" alt="Ελιξίριο του Οστέινου Δράκου">
                         </div>
                         <p>Καταναλώνεται κατά τη χρήση. Ο Μόρτις θα εμφανίσει οστά δράκου όσο αυτό το ελιξίριο είναι ενεργό.</p>
                         <div class="recipe-ingredients">
@@ -254,7 +254,7 @@
                         <div class="recipe-item">
                             <h3><i class="fas fa-scroll"></i>Χειμερινός Ρούνος</h3>
                             <div class="recipe-image-container">
-                                <img src="images/xeimerinos.jpg" alt="Χειμερινός Ρούνος">
+                                <img src="xeimerinos.jpg" alt="Χειμερινός Ρούνος">
                             </div>
                             
                             <p>Συνδυασμός των παρακάτω ρούνων.</p>
@@ -272,7 +272,7 @@
                         <div class="recipe-item">
                             <h3><i class="fas fa-scroll"></i>Φθινοπωρινός Ρούνος</h3>
                             <div class="recipe-image-container">
-                                <img src="images/fthinoporinos.jpg" alt="Φθινοπωρινός Ρούνος">
+                                <img src="fthinoporinos.jpg" alt="Φθινοπωρινός Ρούνος">
                             </div>
                             <p>Συνδυασμός των παρακάτω ρούνων.</p>
                             <div class="recipe-ingredients">
@@ -289,7 +289,7 @@
                         <div class="recipe-item">
                             <h3><i class="fas fa-scroll"></i> Ανοιξιάτικος Ρούνος</h3>
                             <div class="recipe-image-container">
-                                <img src="images/anoiksiatikos.jpg" alt="Ανοιξιάτικος Ρούνος">
+                                <img src="anoiksiatikos.jpg" alt="Ανοιξιάτικος Ρούνος">
                             </div>
                             <p>Συνδυασμός των παρακάτω ρούνων.</p>
                             <div class="recipe-ingredients">
@@ -306,7 +306,7 @@
                         <div class="recipe-item">
                             <h3><i class="fas fa-scroll"></i> Καλοκαιρινός Ρούνος</h3>
                             <div class="recipe-image-container">
-                                <img src="images/kalokairinos.jpg" alt="Καλοκαιρινός Ρούνος">
+                                <img src="kalokairinos.jpg" alt="Καλοκαιρινός Ρούνος">
                             </div>
                             <p>Συνδυασμός των παρακάτω ρούνων.</p>
                             <div class="recipe-ingredients">
@@ -342,3 +342,4 @@
     <script src="back-to-top.js"></script>
 </body>
 </html>
+
