--- a/discord.html
+++ b/discord.html
@@ -54,7 +54,7 @@
                 <li>Ένα φιλικό και υποστηρικτικό περιβάλλον.</li>
             </ul>
             <p>Μην χάνεις χρόνο! Έλα να γνωριστούμε και να παίξουμε μαζί.</p>
-            <a href="YOUR_DISCORD_INVITE_LINK_HERE" target="_blank" class="join-discord-btn">
+            <a href="https://discordapp.com/channels/1027261459295637654/1036742973993517076" target="_blank" class="join-discord-btn">
                 <i class="fab fa-discord"></i> Μπες στον Server!
             </a>
         </div>
@@ -105,3 +105,4 @@
 </body>
 
 </html>
+
