--- a/guild.html
+++ b/guild.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="guild.css"> 
-    <link rel="stylesheet" href="back-to-top.csss"> 
+    <link rel="stylesheet" href="back-to-top.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -152,3 +152,4 @@
 </body>
 
 </html>
+
